--- a/app/src/main/res/layout/activity_wifi_communication.xml
+++ b/app/src/main/res/layout/activity_wifi_communication.xml
@@ -48,6 +48,55 @@
             android:layout_weight="1"
             android:text="关闭WiFi"
             style="@android:style/Widget.DeviceDefault.Button.Inset" />
+
+        <Button
+            android:id="@+id/btn_connect_sever"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="连接模块"
+            style="@android:style/Widget.DeviceDefault.Button.Inset"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="IP: "/>
+
+            <EditText
+                android:id="@+id/edit_sever_ip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PORT: "/>
+
+            <EditText
+                android:id="@+id/edit_sever_port"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <ListView
@@ -95,7 +144,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:textSize="15dp"
-            android:text="发送"/>
+            android:text="发送"
+            style="@android:style/Widget.DeviceDefault.Button.Inset"/>
     </RelativeLayout>
 
 </LinearLayout>
