--- a/app/src/main/res/layout/activity_wifi_communication.xml
+++ b/app/src/main/res/layout/activity_wifi_communication.xml
@@ -61,11 +61,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="7"
             android:orientation="horizontal">
 
             <TextView
@@ -81,8 +82,9 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:orientation="horizontal">
 
             <TextView
