--- a/app/src/main/res/layout/activity_wifi_communication.xml
+++ b/app/src/main/res/layout/activity_wifi_communication.xml
@@ -101,14 +101,23 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="wifi列表"/>
     <ListView
         android:id="@+id/list_view_device"
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="#d0d0d0">
 
     </ListView>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="收发信息"/>
     <TextView
         android:id="@+id/text_receive"
         android:layout_width="match_parent"
