--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,24 +13,24 @@
         android:background="#e0e0e0"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="#fffff0">
 
         <RelativeLayout
             android:id="@+id/home_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_centerVertical="true">
+                android:orientation="vertical">
                 <ImageView
                     android:id="@+id/draw_home"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/home"/>
                 <TextView
@@ -39,6 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="我的设备"
+                    android:textSize="10dp"
                     android:textColor="#7c7c7c"/>
             </LinearLayout>
 
@@ -48,6 +49,7 @@
             android:id="@+id/classy_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1">
 
             <LinearLayout
@@ -57,8 +59,8 @@
                 android:layout_centerVertical="true">
                 <ImageView
                     android:id="@+id/draw_classy"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/classy"/>
                 <TextView
@@ -67,6 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="OKIN商城"
+                    android:textSize="10dp"
                     android:textColor="#7c7c7c"/>
             </LinearLayout>
 
@@ -76,6 +79,7 @@
             android:id="@+id/message_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1">
 
             <LinearLayout
@@ -85,8 +89,8 @@
                 android:layout_centerVertical="true">
                 <ImageView
                     android:id="@+id/draw_message"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/message"/>
                 <TextView
@@ -95,6 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="酷玩资讯"
+                    android:textSize="10dp"
                     android:textColor="#7c7c7c"/>
             </LinearLayout>
 
@@ -104,6 +109,7 @@
             android:id="@+id/mine_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1">
 
             <LinearLayout
@@ -113,8 +119,8 @@
                 android:layout_centerVertical="true">
                 <ImageView
                     android:id="@+id/draw_mine"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/mine"/>
                 <TextView
@@ -123,6 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="个人中心"
+                    android:textSize="10dp"
                     android:textColor="#7c7c7c"/>
             </LinearLayout>
 
