--- a/app/src/main/res/layout/device_fragment.xml
+++ b/app/src/main/res/layout/device_fragment.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:orientation="horizontal"
         android:background="#f0f0f0">
 
@@ -15,9 +15,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="20dp"
+            android:textColor="#000000"
+            android:textSize="18dp"
             android:text="设备列表"/>
         <Button
+            android:id="@+id/btn_add_device"
             android:layout_width="30sp"
             android:layout_height="30sp"
             android:layout_centerVertical="true"
