--- a/app/src/main/res/layout/activity_add_device.xml
+++ b/app/src/main/res/layout/activity_add_device.xml
@@ -9,31 +9,31 @@
         android:id="@+id/title_add_device"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:orientation="horizontal"
-        android:background="#f0f0f0">
+        android:background="#f0f0f0"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:text="softAP配置"
             android:textColor="#000000"
-            android:textSize="18dp"
-            android:text="softAP配置"/>
+            android:textSize="18dp" />
 
         <Button
             android:id="@+id/btn_back_device"
             android:layout_width="30sp"
             android:layout_height="30sp"
-            android:background="@drawable/left_btn_black"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/left_btn_black" />
 
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_marginTop="55dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="55dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -46,12 +46,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="路由:"/>
+                android:text="路由:" />
+
             <EditText
                 android:id="@+id/edit_goal_ap_ssid"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="9"/>
+                android:layout_weight="9" />
         </LinearLayout>
 
         <LinearLayout
@@ -63,12 +64,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="密码:"/>
+                android:text="密码:" />
+
             <EditText
                 android:id="@+id/edit_goal_ap_password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="9"/>
+                android:layout_weight="9" />
         </LinearLayout>
     </LinearLayout>
 
@@ -80,9 +82,9 @@
             android:id="@+id/button_soft_ap_config"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#0099cc"
             android:text="softAP配置"
-            android:textColor="#ffffff"
-            android:background="#0099cc"/>
+            android:textColor="#ffffff" />
     </RelativeLayout>
 
 </LinearLayout>
