--- a/app/src/main/res/layout/news_fragment.xml
+++ b/app/src/main/res/layout/news_fragment.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="news......."/>
+        android:text="nothing to show......."/>
 
 </LinearLayout>
